syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";

option go_package = "./pkg/pb/chat";

service ChatService {
    rpc Chat (SendMessageRequest) returns (SendMessageResponse) {}
    rpc CreateChatRoom (CreateChatRoomRequest) returns (CreateChatRoomResponse){}
    rpc SaveMessage (SaveMessageRequest) returns (SaveMessageResponse){}
    rpc FetchRecipient (FetchRecipientRequest) returns (FetchRecipientResponse){}
    rpc GetAllChats  (GetAllChatsRequest) returns (GetAllChatsResponse){}
    rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse){}
    rpc ReadMessage (ReadMessageRequest) returns (ReadMessageResponse){}
 
}


message SendMessageRequest {
    int64 userid = 1;
    string chatid = 2;
}

message SendMessageResponse {
    string status = 1;
    string error = 2;
}

message GetAllChatsRequest {
    int64 userid = 1;
}

message chat {
    string id = 1;
    repeated uint64 users = 2;
    string lastmessage = 3;
    google.protobuf.Timestamp lastmessagetime = 4;
}

message userData {
    int64 userid = 1;
    string username = 2;
    string profile = 3;
}

message chatResponse {
    chat chat = 1;
    userData user = 2;
}

message GetAllChatsResponse {
    repeated chatResponse response = 1;
}

message GetMessagesRequest {
    string chatid =1;
}

message Response {
    string id = 1;
    uint32 sender_id = 2;
    string chat_id = 3;
    bool seen = 4;
    string image = 5;
    string message_content = 6;
    google.protobuf.Timestamp timestamp = 7;
}

message GetMessagesResponse{
    repeated Response response = 1;
}

message SaveMessageRequest {
    string chatid =1;
    int64 senderid = 2;
    string message = 3;
}

message SaveMessageResponse {
    string id = 1;
}

message ReadMessageRequest {
    string chatid =1;
    int64 userid = 2;
}

message ReadMessageResponse{
    int64 id = 1;
}

message FetchRecipientRequest {
    string chatid =1;
    int64 userid = 2;
}

message FetchRecipientResponse{
    int64 id = 1;
}

message CreateChatRoomRequest{
    int64 userid =1;
    int64 followingid =2;
}

message CreateChatRoomResponse{}
