syntax = "proto3";

package post;

import "google/protobuf/timestamp.proto";

option go_package = "./pkg/pb/post";

service PostService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse){}
    rpc GetPost (GetPostRequest) returns (GetPostResponse){}
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse){}
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse){}
    rpc GetAllPost (GetAllPostRequest) returns (GetAllPostResponse){}
    rpc ArchivePost (ArchivePostRequest) returns (ArchivePostResponse){}
    rpc UnArchivePost (UnArchivePostrequest) returns (UnArchivePostResponse){}
    rpc GetAllArchivePost (GetAllArchivePostRequest) returns (GetAllArchivePostResponse){}
    rpc LikePost (LikePostRequest) returns (LikePostResponse){}
    rpc UnLinkPost (UnLikePostRequest) returns (UnLikePostResponse){}
    rpc PostComment (PostCommentRequest) returns (PostCommentResponse){}
    rpc SavedPost (SavedPostRequest) returns (SavedPostResponse){}
    rpc UnSavedPost (UnSavedPostRequest) returns (UnSavedPostResponse){}
    rpc GetSavedPost (GetSavedPostRequest) returns (GetSavedPostResponse){}
    // rpc GetComment (GetCommentRequest) returns (GetCommentResponse){}
    // rpc ReplyComment (ReplyCommentRequest) returns (ReplyCommentResponse){}
    // rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse){}
    // rpc CreateStory (CreateStoryRequest) returns (CreateStoryResponse){}
    // rpc DeleteStory (DeleteStoryRequest) returns (DeleteStoryResponse){}
    // rpc LikeStory (LikeStoryRequest) returns (LikeStoryResponse){}
}

message CreatePostRequest {
    int64 userid = 1;
    string caption = 2;
    PostPhoto post = 3;
    int64 typeid = 4; 
    Tag tag = 5;
}

message PostPhoto {
    bytes url = 1; 
}

message UserData {
    int64 userid = 1;
    string username = 2;
    string imageurl = 3;
}

message CreatePostResponse {
    int64 id = 1;
    UserData user =2;
    string caption = 3;
    repeated string tag = 4; 
    string url = 5;
    int64 like =6 ;
    int64 comment = 7;
    google.protobuf.Timestamp created_at = 8; 
}

message GetPostRequest {
    int64 userid = 1;
    int64 postid =2;
}

message GetPostResponse{
    CreatePostResponse postresponse = 1;
}

message UpdatePostRequest {
    int64 userid = 1;
    int64 postid = 2;
    string caption = 3;
    int64 typeid = 5; 
    Tag tag = 6;
}

message Tag {
    repeated string user = 1;
}

message UpdatePostResponse{
    int64 id = 1;
    UserData user =2;
    string caption = 3;
    repeated string tag = 4; 
    string url = 5;
    int64 like =6 ;
    int64 comment = 7;
    google.protobuf.Timestamp created_at = 8; 
}

message DeletePostRequest{
    int64 userid = 1;
    int64 postid = 2;
}

message ArchivePostRequest{
    int64 userid = 1;
    int64 postid = 2;
}

message ArchivePostResponse{}

message UnArchivePostrequest {
    int64 userid = 1;
    int64 postid = 2;
}

message UnArchivePostResponse {}

message GetAllArchivePostRequest {
    int64 userid = 1;
}

message ArchivePostResponses {
    int64 id = 1;
    string caption = 2;
    string url = 3;
    int64 like = 4;
    int64 comment = 5;
    google.protobuf.Timestamp created_at = 6; 
}

message GetAllArchivePostResponse{
    repeated ArchivePostResponses allpost = 1;
}

message DeletePostResponse {}

message GetAllPostRequest {
    int64 userid = 1;
}

message GetAllPostResponse {
    repeated CreatePostResponse allpost = 1;
}

message LikePostRequest {
    int64 userid = 1;
    int64 postid = 2;   
}

message LikePostResponse{
    int64 userid = 1;
    string likedUser = 2;
    string posturl = 3;
    google.protobuf.Timestamp created_at = 4; 
}

message UnLikePostRequest{
    int64 userid = 1;
    int64 postid = 2;   
}

message UnLikePostResponse{}

message PostCommentRequest{
    int64 userid = 1;
    int64 postid = 2;
    string comment = 3;
}

message PostCommentResponse {
    int64 userid = 1;
    string CommentedUser = 2;
    string posturl = 3;
    string comment = 4;
    google.protobuf.Timestamp created_at = 5; 
}

message SavedPostRequest {
    int64 userid = 1;
    int64 postid = 2;
}

message SavedPostResponse {}

message UnSavedPostRequest {
    int64 userid = 1;
    int64 postid = 2;
}

message UnSavedPostResponse{}

message GetSavedPostRequest{
    int64 userid = 1;
}

message GetSavedPostResponse{
    repeated CreatePostResponse allpost = 1;
}




message GetCommentRequest{
    int64 postid=1;
}

message Comment {
    string comment = 1;
    google.protobuf.Timestamp created_at = 2; 
}

message GetCommentResponse{
    int64 postid = 1;
    repeated Comment getcomment = 2;
}

message ReplyCommentRequest {
    int64 userid = 1;
    int64 commentid = 2;
    int64 postid = 3;
    string message = 4;
}

message ReplyCommentResponse {}

message DeleteCommentRequest {
    int64 userid = 1;
    int64 Commentid = 2;
}

message DeleteCommentResponse{}


message story {
    bytes photo = 1; 
}


message StoryUrl {
    bytes postimages = 1;
}

message CreateStoryRequest{
    int64 serid = 1;
    StoryUrl story = 2;
}

message CreateStoryResponse {
    UserData user =1;
    string story = 2;
    google.protobuf.Timestamp created_at = 3; 
}

message DeleteStoryRequest {
    int64 userID = 1;
    int64 storyid = 2;
}

message DeleteStoryResponse{}

message LikeStoryRequest {
    int64 userid = 1;
    int64 storyid = 2;
}

message LikeStoryResponse {}